(lang dune 3.15)

(name tapl)

(generate_opam_files true)

(source
 (github eoan-ermine/tapl))

(authors "Danil Sidoruk")

(maintainers "Danil Sidoruk")

(license MIT)

(package
 (name tapl)
 (synopsis "Implementations for Pierce' Types and Programming Languages")
 (description "Implementations for Pierce' Types and Programming Languages")
 (depends ocaml dune)
)
